--- a/views/absensi.ejs
+++ b/views/absensi.ejs
@@ -40,19 +40,19 @@
                         <tbody>
                           <tr>
                             <th scope="row">Nama Mahasiswa</th>
-                            <td>:   Apil</td>
+                            <td>:   <%= userData.nama %></td>
                           </tr>
                           <tr>
                             <th scope="row">Nomor Induk Mahasiswa</th>
-                            <td>:   062230701576</td>
+                            <td>:   <%= userData.nim %></td>
                           </tr>
                           <tr>
                             <th scope="row">Universitas</th>
-                            <td>:   Politeknik Negeri Sriwijaya</td>
+                            <td>:   <%= userData.univ %></td>
                           </tr>
                           <tr>
                             <th scope="row">Tanggal</th>
-                            <td>:   13 Oktober 2024</td>
+                            <td>:   <%= tanggal %></td>
                           </tr>
                           <tr>
                             <th scope="row">Waktu</th>
