--- a/views/pengaturan.ejs
+++ b/views/pengaturan.ejs
@@ -97,20 +97,20 @@
             <div class="card mt-5 mb-5">
                 <h5 class="card-header p-3">Pengaturan Absensi</h5>
                 <div class="card-body mt-3">
-                    <form action="" method="post" enctype="multipart/form-data">
+                    <form action="/simpan-pengaturan-absensi" method="post">
                         <div class="row mb-3">
-                          <label for="mulai" class="col-sm-2 col-form-label">Mulai Absensi</label>
+                          <label for="jam_buka" class="col-sm-2 col-form-label">Mulai Absensi</label>
                           <div class="col-sm-10">
-                            <input type="time" name="mulai" class="form-control" required value="">
+                            <input type="time" name="jam_buka" class="form-control" value="<%= pengaturan.jam_buka %>" required>
                           </div>
                         </div>
                         <div class="row mb-3">
-                          <label for="akhir" class="col-sm-2 col-form-label">Akhir Absensi</label>
+                          <label for="jam_tutup" class="col-sm-2 col-form-label">Akhir Absensi</label>
                           <div class="col-sm-10">
-                            <input type="time" name="akhir" class="form-control" required value="">
+                            <input type="time" name="jam_tutup" class="form-control" value="<%= pengaturan.jam_buka %>" required>
                           </div>
                         </div>
-                        <a href="" class="btn btn-success bi-pencil-square">Simpan Perubahan</a>
+                        <button type="submit" class="btn btn-success bi-pencil-square">Simpan Perubahan</button>
                     </form>
                 </div>
             </div>
