--- a/views/absen-mhs.ejs
+++ b/views/absen-mhs.ejs
@@ -30,9 +30,9 @@
         <div id="keterangan-container" style="display: none;" class="row mb-3">
           <label for="alasan" class="col-sm-2 col-form-label">Keterangan</label>
           <div class="col-sm-10">
-            <textarea class="form-control mb-2" name="alasan"></textarea>
+              <textarea class="form-control mb-2" name="alasan" placeholder="Masukkan keterangan jika Izin atau Sakit"></textarea>
           </div>
-        </div>
+      </div>
         <div id="absensi-status">
           <p id="current-time"></p>
           <p id="current-status"></p>
