--- a/views/administrator.ejs
+++ b/views/administrator.ejs
@@ -58,9 +58,9 @@
                       </tr>
                   </thead>
                   <tbody>
-                    <% for (let admins of admin) { %>
+                    <% admin.forEach((admins, index) => { %>
                       <tr>
-                          <th scope="row"><%= admins.id %></th>
+                          <th scope="row"><%= index + 1 %></th>
                           <th scope="row"><%= admins.nama %></th>
                           <th scope="row"><%= admins.nip %></th>
                           <th scope="row"><%= admins.email %></th>
@@ -69,7 +69,7 @@
                             <a href="/edit-admin/<%= admins.id %>" class="btn btn-warning edit bi-pencil-square"></a>
                             <a href="/delete-admin/<%= admins.id %>" class="btn btn-danger bi-trash-fill" onclick="return confirm('Are you sure you want to delete this admin?')"></a>
                       </tr>
-                    <% } %>
+                    <% }) %>
                   </tbody>
               </table>
             </div>
