--- a/views/data-mhs.ejs
+++ b/views/data-mhs.ejs
@@ -71,9 +71,9 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <% for (let user of users) { %>
+                        <% users.forEach((user, index) => { %>
                         <tr>
-                            <th scope="row"><%= user.id %></th>
+                            <th scope="row"><%= index + 1 %></th>
                             <th scope="row"><%= user.nama %></th>
                             <th scope="row"><%= user.univ %></th>
                             <th scope="row"><%= user.nim %></th>
@@ -87,7 +87,7 @@
                               <a href="/delete/<%= user.id %>" class="btn btn-danger bi-trash-fill" onclick="return confirm('Are you sure you want to delete this user?')"></a>
                             </th>
                         </tr>
-                        <% } %>
+                        <% }) %>
                     </tbody>
                 </table>
             </div>
