--- a/views/absen-mhs.ejs
+++ b/views/absen-mhs.ejs
@@ -14,32 +14,36 @@
 </head>
 <body>
   <div class="container">
-    <form id="absensi-form" action="/tambah-absensi" method="post">
-      <input type="hidden" name="id_mhs" value="<%= userData.id %>">
-      <h3 class="mt-5">MULAI ABSENSI</h3>
-        <div class="row mb-3 sts">
-          <label for="status" class="col-sm-2 col-form-label">Status</label>
-          <div class="col-sm-10">
-            <select id="status" name="status" class="form-select" required>
-              <option value="Hadir">Hadir</option>
-              <option value="Izin">Izin</option>
-              <option value="Sakit">Sakit</option>
-            </select>
+    <div class="card mt-5">
+      <h5 class="card-header p-3">MULAI ABSENSI</h5>
+      <div class="card-body mt-3">
+        <form id="absensi-form" action="/tambah-absensi" method="post">
+          <input type="hidden" name="id_mhs" value="<%= userData.id %>">
+            <div class="row mb-3 sts">
+              <label for="status" class="col-sm-2 col-form-label">Status</label>
+              <div class="col-sm-10">
+                <select id="status" name="status" class="form-select" required>
+                  <option value="Hadir">Hadir</option>
+                  <option value="Izin">Izin</option>
+                  <option value="Sakit">Sakit</option>
+                </select>
+              </div>
+            </div>
+            <div id="keterangan-container" style="display: none;" class="row mb-3">
+              <label for="alasan" class="col-sm-2 col-form-label">Keterangan</label>
+              <div class="col-sm-10">
+                  <textarea class="form-control mb-2" name="alasan" placeholder="Masukkan keterangan jika Izin atau Sakit"></textarea>
+              </div>
           </div>
-        </div>
-        <div id="keterangan-container" style="display: none;" class="row mb-3">
-          <label for="alasan" class="col-sm-2 col-form-label">Keterangan</label>
-          <div class="col-sm-10">
-              <textarea class="form-control mb-2" name="alasan" placeholder="Masukkan keterangan jika Izin atau Sakit"></textarea>
-          </div>
+            <div id="absensi-status">
+              <p id="current-time"></p>
+              <p id="current-status"></p>
+            </div>
+          <input type="submit" id="absensi-button" class="btn btn-success" value="Absensi">
+          <a class="btn btn-danger" href="/absensi"> Batal</a>
+        </form>
       </div>
-        <div id="absensi-status">
-          <p id="current-time"></p>
-          <p id="current-status"></p>
-        </div>
-      <input type="submit" id="absensi-button" class="btn btn-success" value="Absensi">
-      <a class="btn btn-danger" href="/absensi"> Batal</a>
-    </form>
+    </div>
   </div>
 
   <script src="/bootstrap/js/bootstrap.min.js"></script>
