--- a/views/edit-admin.ejs
+++ b/views/edit-admin.ejs
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit</title>
+    <title>Edit Admin</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <div class="container">
-        <form action="/update-admin/<%= userData.id %>" method="post">
+      <div class="card mt-5">
+        <h5 class="card-header p-3">EDIT ADMIN</h5>
+        <div class="card-body mt-3">
+          <form action="/update-admin/<%= userData.id %>" method="post">
             <div class="row mb-3">
               <label for="nama" class="col-sm-2 col-form-label">Nama</label>
               <div class="col-sm-10">
@@ -29,7 +32,9 @@
             </div>
             <input type="submit" class="btn btn-success" value="Simpan">
             <a class="btn btn-danger" href="/administrator"> Batal</a>
-        </form>
+          </form>
+        </div>
+      </div>
     </div> 
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
