--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -8,7 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <form action="/update/<%= userData.id %>" method="post" enctype="multipart/form-data">
+      <div class="card mt-5">
+        <h5 class="card-header p-3">EDIT MAHASISWA</h5>
+        <div class="card-body mt-3">
+          <form action="/update/<%= userData.id %>" method="post" enctype="multipart/form-data">
             <div class="row mb-3">
               <label for="nama" class="col-sm-2 col-form-label">Nama</label>
               <div class="col-sm-10">
@@ -53,7 +56,9 @@
             </div>
             <input type="submit" class="btn btn-success" value="Simpan">
             <a class="btn btn-danger" href="/data-mhs"> Batal</a>
-        </form>
+          </form>
+        </div>
+      </div>
     </div> 
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
