--- a/views/tambah-absen.ejs
+++ b/views/tambah-absen.ejs
@@ -14,48 +14,52 @@
 </head>
 <body>
   <div class="container">
-    <form action="/tambah-absensi1" method="post">
-      <h3 class="mt-5">TAMBAH ABSENSI</h3>
-      <div class="row mb-3 nm">
-        <label for="nama" class="col-sm-2 col-form-label">Nama Mahasiswa</label>
-        <div class="col-sm-10">
-          <select name="id_mhs" class="form-select" required>
-            <option value="">Pilih Mahasiswa</option>
-            <% mahasiswa.forEach((mhs) => { %>
-              <% if (idMhsArray.includes(mhs.id)) { %>
-                <option value="<%= mhs.id %>"><%= mhs.nama %></option>
-              <% } %>
-            <% }) %>
-          </select>
-        </div>
+    <div class="card mt-5">
+      <h5 class="card-header p-3">TAMBAH ABSENSI</h5>
+      <div class="card-body mt-3">
+        <form action="/tambah-absensi1" method="post">
+          <div class="row mb-3 nm">
+            <label for="nama" class="col-sm-2 col-form-label">Nama Mahasiswa</label>
+            <div class="col-sm-10">
+              <select name="id_mhs" class="form-select" required>
+                <option value="">Pilih Mahasiswa</option>
+                <% mahasiswa.forEach((mhs) => { %>
+                  <% if (idMhsArray.includes(mhs.id)) { %>
+                    <option value="<%= mhs.id %>"><%= mhs.nama %></option>
+                  <% } %>
+                <% }) %>
+              </select>
+            </div>
+          </div>
+          <div class="row mb-3 st">
+            <label for="status" class="col-sm-2 col-form-label">Status</label>
+            <div class="col-sm-10">
+              <select name="status" class="form-select" required id="statusSelect">
+                <option value="Hadir">Hadir</option>
+                <option value="Izin">Izin</option>
+                <option value="Sakit">Sakit</option>
+                <option value="Tidak Hadir">Tidak Hadir</option>
+              </select>
+            </div>
+          </div>
+          <div class="row mb-3 tg">
+            <label for="tanggal" class="col-sm-2 col-form-label">Tanggal Absensi</label>
+            <div class="col-sm-10">
+              <input type="date" name="tanggal" class="form-control" required>
+            </div>
+          </div>
+          <div class="row mb-3" id="alasanContainer" style="display: none;">
+            <label for="alasan" class="col-sm-2 col-form-label">Keterangan</label>
+            <div class="col-sm-10">
+              <textarea class="form-control mb-2" name="alasan" placeholder="Masukkan keterangan jika Izin atau Sakit"></textarea>
+            </div>
+          </div>
+          <input type="submit" class="btn btn-success" value="Simpan">
+          <button class="btn btn-warning" type="reset"> Reset</button>
+          <a class="btn btn-danger" href="/data-absen"> Batal</a>
+        </form>
       </div>
-      <div class="row mb-3 st">
-        <label for="status" class="col-sm-2 col-form-label">Status</label>
-        <div class="col-sm-10">
-          <select name="status" class="form-select" required id="statusSelect">
-            <option value="Hadir">Hadir</option>
-            <option value="Izin">Izin</option>
-            <option value="Sakit">Sakit</option>
-            <option value="Tidak Hadir">Tidak Hadir</option>
-          </select>
-        </div>
-      </div>
-      <div class="row mb-3 tg">
-        <label for="tanggal" class="col-sm-2 col-form-label">Tanggal Absensi</label>
-        <div class="col-sm-10">
-          <input type="date" name="tanggal" class="form-control" required>
-        </div>
-      </div>
-      <div class="row mb-3" id="alasanContainer" style="display: none;">
-        <label for="alasan" class="col-sm-2 col-form-label">Keterangan</label>
-        <div class="col-sm-10">
-          <textarea class="form-control mb-2" name="alasan" placeholder="Masukkan keterangan jika Izin atau Sakit"></textarea>
-        </div>
-      </div>
-      <input type="submit" class="btn btn-success" value="Simpan">
-      <button class="btn btn-warning" type="reset"> Reset</button>
-      <a class="btn btn-danger" href="/data-absen"> Batal</a>
-    </form>
+    </div>
   </div>
     
   <script>
