--- a/views/data-kegiatan.ejs
+++ b/views/data-kegiatan.ejs
@@ -43,7 +43,7 @@
 
         <div class="col-md-10 bg-body-secondary w-75 data-mahasiswa">
             <p class="p-3 bi-book-fill">  /   Data Kegiatan</p>
-            <div class="card">
+            <!-- <div class="card">
               <div class="card-header p-3 d-flex align-items-center justify-content-between">
                 <h5>Data Kegiatan</h5>
                 <div class="input-group w-50">
@@ -53,7 +53,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
 
             <div class="container">
               <h3>DATA KEGIATAN</h3>
@@ -93,7 +93,7 @@
                       <th scope="row">
                         <a href="/edit-kegiatan/<%= kegiatans.id %>" class="btn btn-warning bi-pencil-square"></a>
                         <a href="/hapus-kegiatan/<%= kegiatans.id %>" class="btn btn-danger bi-trash-fill" onclick="return confirm('Are you sure you want to delete this kegiatan?')"></a>
-                        <a href="" class="btn btn-primary bi-file-text-fill"></a>
+                        <!-- <a href="" class="btn btn-primary bi-file-text-fill"></a> -->
                       </th>
                     </tr>
                     <% increment = kegiatan.length; %>
