--- a/views/kegiatan.ejs
+++ b/views/kegiatan.ejs
@@ -33,7 +33,7 @@
         </nav>
         <div class="col-md-10 bg-body-secondary w-75">
             <p class="p-3 bi-book-fill">  /   Kegiatan Harian</p>
-            <div class="card">
+            <!-- <div class="card">
                 <div class="card-header p-3 d-flex align-items-center justify-content-between">
                     <h5>Kegiatan Harian</h5>
                     <div class="input-group w-50">
@@ -43,11 +43,12 @@
                       </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <div class="container">
+                <h3>KEGIATAN HARIAN</h3>
                 <a class="btn btn-success bi-plus mb-3 mt-3" href="/tambah-kegiatan-mhs"> Tambah</a>
-                <a class="btn btn-primary bi-file-text-fill mb-3 mt-3" href=""> Cetak</a>
+                <!-- <a class="btn btn-primary bi-file-text-fill mb-3 mt-3" href=""> Cetak</a> -->
                 <table class="table table-responsive">
                     <thead>
                         <tr>
