--- a/views/pengaturan.ejs
+++ b/views/pengaturan.ejs
@@ -42,7 +42,7 @@
         </nav>
         <div class="col-md-10 bg-body-secondary w-75 container">
             <p class="p-3 bi-gear-fill">  /   Pengaturan</p>
-            <div class="card">
+            <!-- <div class="card">
                 <h5 class="card-header p-3">Profil Instansi</h5>
                 <div class="card-body mt-3">
                     <form action="" method="post" enctype="multipart/form-data">
@@ -92,7 +92,7 @@
                         <a href="" class="btn btn-success bi-pencil-square">Simpan Perubahan</a>
                     </form>
                 </div>
-            </div>
+            </div> -->
 
             <div class="card mt-5 mb-5">
                 <h5 class="card-header p-3">Pengaturan Absensi</h5>
