--- a/views/data-absen.ejs
+++ b/views/data-absen.ejs
@@ -43,7 +43,7 @@
 
         <div class="col-md-10 bg-body-secondary w-75 data-mahasiswa">
             <p class="p-3 bi-calendar-fill">  /   Data Absensi</p>
-            <div class="card">
+            <!-- <div class="card">
               <div class="card-header p-3 d-flex align-items-center justify-content-between">
                 <h5>Data Absensi</h5>
                 <div class="input-group w-50">
@@ -53,7 +53,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
 
             <div class="container">
               <h3>DATA ABSEN</h3>
@@ -68,7 +68,7 @@
                         <th scope="col">Waktu</th>
                         <th scope="col">Hari</th>
                         <th scope="col">Tanggal</th>
-                        <th scope="col">Aksi</th>
+                        <!-- <th scope="col">Aksi</th> -->
                       </tr>
                   </thead>
                   <tbody>
@@ -81,9 +81,9 @@
                           <td><%= item.waktu %></td>
                           <td><%= item.hari %></td>
                           <td><%= moment(item.tanggal).format('DD-MM-YYYY') %></td>
-                          <td>
+                          <!-- <td>
                               <a href="" class="btn btn-primary bi-file-text-fill"> Cetak</a>
-                          </td>
+                          </td> -->
                       </tr>
                     <% }) %>
                   </tbody>
