--- a/views/data-mhs.ejs
+++ b/views/data-mhs.ejs
@@ -26,7 +26,7 @@
 <body>
     <nav class="navbar bg-dark row">
         <div class="container-fluid">
-          <span class="navbar-brand mb-3 ms-5 h1 text-white">ABSEN ANAK MAGANG</span>
+          <span class="navbar-brand mb-3 ms-5 h1 text-white">ABSEN MAHASISWA MAGANG</span>
         </div>
     </nav>
     <div class="row">
@@ -42,7 +42,7 @@
         </nav>
         <div class="col-md-10 bg-body-secondary w-75 data-mahasiswa">
             <p class="p-3 bi-people-fill">  /   Data Mahasiswa</p>
-            <div class="card">
+            <!-- <div class="card">
               <div class="card-header p-3 d-flex align-items-center justify-content-between">
                 <h5>Data Mahasiswa</h5>
                 <div class="input-group w-50">
@@ -52,7 +52,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
 
             <div class="container">
                 <h3><%= title %></h3>
