--- a/views/riwayat-absen.ejs
+++ b/views/riwayat-absen.ejs
@@ -33,7 +33,7 @@
         </nav>
         <div class="col-md-10 bg-body-secondary w-75">
             <p class="p-3 bi-arrow-counterclockwise">  /   Riwayat Absensi</p>
-            <div class="card">
+            <!-- <div class="card">
                 <div class="card-header p-3 d-flex align-items-center justify-content-between">
                     <h5>Riwayat Absensi</h5>
                     <div class="input-group w-50">
@@ -43,10 +43,11 @@
                       </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <div class="container">
-                <a class="btn btn-primary bi-file-text-fill mb-3 mt-3" href=""> Cetak</a>
+                <h3>RIWAYAT ABSEN</h3>
+                <!-- <a class="btn btn-primary bi-file-text-fill mb-3 mt-3" href=""> Cetak</a> -->
                 <table class="table">
                     <thead>
                         <tr>
