--- a/views/tambah.ejs
+++ b/views/tambah.ejs
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data Mahasiswa</title>
+    <title>Tambah Mahasiswa</title>
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="bootstrap-icons/font/bootstrap-icons.min.css">
 </head>
 <body>
   <div class="container">
     <div class="card mt-5 mb-5">
-      <h5 class="card-header p-3">TAMBAH ANAK MAGANG BARU</h5>
+      <h5 class="card-header p-3">TAMBAH MAHASISWA MAGANG BARU</h5>
       <div class="card-body mt-3">
         <form action="/tambah" method="post" enctype="multipart/form-data">
           <div class="row mb-3">
